--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^2.0.0",
         "tailwindcss": "^4.0.0",
+        "vue-router": "^4.4.5",
         "vite": "^7.0.7",
         "@vitejs/plugin-vue": "^6.0.2",
         "vue": "^3.5.13",
