--- a/package.json
+++ b/package.json
@@ -8,16 +8,21 @@
     },
     "devDependencies": {
         "@tailwindcss/vite": "^4.0.0",
+        "@vitejs/plugin-vue": "^6.0.2",
         "axios": "^1.11.0",
         "concurrently": "^9.0.1",
-        "laravel-vite-plugin": "^2.0.0",
-        "tailwindcss": "^4.0.0",
-        "vue-router": "^4.4.5",
-        "vite": "^7.0.7",
-        "@vitejs/plugin-vue": "^6.0.2",
-        "vue": "^3.5.13",
-        "pinia": "^2.2.6",
         "laravel-echo": "^1.15.3",
-        "pusher-js": "^8.4.0"
+        "laravel-vite-plugin": "^2.0.0",
+        "pinia": "^2.2.6",
+        "pusher-js": "^8.4.0",
+        "tailwindcss": "^4.0.0",
+        "vite": "^7.0.7",
+        "vue": "^3.5.13",
+        "vue-router": "^4.4.5"
+    },
+    "dependencies": {
+        "@tiptap/extension-placeholder": "^3.13.0",
+        "@tiptap/starter-kit": "^3.13.0",
+        "@tiptap/vue-3": "^3.13.0"
     }
 }
